changes based on initial vehicle tests with CSV-Pids